@@ -1,12 +1,12 @@
 {
-  "timestamp" : "2025-02-01T01:12:30Z",
-  "count_outdated" : 1746,
-  "uniques_outdated" : 991,
-  "count" : 1748,
-  "uniques" : 993,
+  "timestamp" : "2025-02-02T01:11:58Z",
+  "count_outdated" : 1747,
+  "uniques_outdated" : 992,
+  "count" : 1749,
+  "uniques" : 994,
   "clones" : [
     {
-      "timestamp": "2025-01-19T00:00:00Z",
+      "timestamp": "2025-01-31T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "count_decinc": [ 0, 1 ],
@@ -15,7 +15,7 @@
       "uniques_decinc": [ 0, 1 ]
     },
     {
-      "timestamp": "2025-01-31T00:00:00Z",
+      "timestamp": "2025-02-01T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "count_decinc": [ 0, 1 ],
